// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CumulativeRevenueTooltip /> should render correctly 1`] = `
<ChartTooltip
  bodyComponent={
    <React.Fragment>
      <ForwardRef(styled.h3)>
        Revenue
      </ForwardRef(styled.h3)>
      <ForwardRef(styled.p)>
        $100.00
      </ForwardRef(styled.p)>
    </React.Fragment>
  }
  headerComponent={
    <ForwardRef(styled.p)>
      2018-06-18T15:47:45.706Z @MMM DD, YYYY
    </ForwardRef(styled.p)>
  }
/>
`;

exports[`<CumulativeRevenueTooltip /> should render correctly when active is false 1`] = `""`;

exports[`<CumulativeRevenueTooltip /> should render correctly when no payload is passed 1`] = `""`;

exports[`<CumulativeRevenueTooltip /> should render correctly with different dateformats  1`] = `
<ChartTooltip
  bodyComponent={
    <React.Fragment>
      <ForwardRef(styled.h3)>
        Revenue
      </ForwardRef(styled.h3)>
      <ForwardRef(styled.p)>
        $100.00
      </ForwardRef(styled.p)>
    </React.Fragment>
  }
  headerComponent={
    <React.Fragment>
      <ForwardRef(styled.p)>
        2018-06-18T15:47:45.706Z @MMM DD, YYYY
      </ForwardRef(styled.p)>
      <ForwardRef(styled.p)>
        2018-06-18T15:47:45.706Z @hh:mm a
      </ForwardRef(styled.p)>
    </React.Fragment>
  }
/>
`;
